# notebook-data-redirector

./: .gitignore  .travis.yml  README  README.md  configure.py  deploy.py  install_webhook.py  pyproject.toml  setup.cfg  template.yaml  tox.ini  webhook_receiver.py
.github/workflows/: checks.yml
notebook_data_redirector/: common.py  redirector.py  requirements.txt  sync.py  validation_worker.py  webhook_receiver.py  webhook_worker.py
redirector/: common.py  redirector.py  requirements.txt  sync.py  webhook_receiver.py
scripts/: create_secret.py  deploy.py  install_webhook.py
tests/: conftest.py  test_common.py  test_redirector.py  test_sync.py  test_validation_worker.py  test_webhook_receiver.py  test_webhook_worker.py
