[metadata]
name = notebook_data_redirector
provides = notebook_data_redirector
package_name = notebook_data_redirector
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = An AWS application that redirects requests to files publicly hosted on Box.
long_description = file: README.md
url = https://github.com/spacetelescope/notebook-data-redirector
github_project = spacetelescope/notebook-data-redirector

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools >=41.0.1, <42
install_requires =
    boxsdk[jwt] >=2.5.0, <3
    boto3

[options.extras_require]
dev =
    black >=19.3b0, <20
    flake8
    pytest >=5.0.1, <6
    pytest-cov >= 2.7.1, <3
    tox >=3.13.2, <4
    bandit

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg

[tool:pytest]
testpaths = tests
