[metadata]
name = notebook_data_redirector
provides = notebook_data_redirector
package_name = notebook_data_redirector
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = An AWS application that redirects requests to files publicly hosted on Box.
long_description = file: README.md
url = https://github.com/spacetelescope/notebook-data-redirector
github_project = spacetelescope/notebook-data-redirector

[options]
packages = find:
python_requires = >=3.12
setup_requires =
    setuptools >=41.0.1
install_requires =
    boxsdk[jwt] >=3.0, <4
    boto3

[options.extras_require]
dev =
    black >=23.0
    flake8
    pytest >=7.0
    pytest-cov >=4.0
    tox >=4.0
    bandit
    aws-sam-cli

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg

[tool:pytest]
testpaths = tests
